update rest api url root path etc.

--- a/ceeq/apps/core/templates/core/base.html
+++ b/ceeq/apps/core/templates/core/base.html
@@ -213,7 +213,7 @@
 
         <script>
             $("#search-input").autocomplete({
-                source: "/ceeq/api/v1/searchAutoComplete",
+                source: {{ root_path }} + "api/v1/searchAutoComplete",
                 autoFocus: true
             });
         </script>
