--- a/ceeq/apps/core/templates/core/base.html
+++ b/ceeq/apps/core/templates/core/base.html
@@ -213,7 +213,7 @@
 
 {#        <script src="https://code.highcharts.com/highcharts.js"></script>#}
 {#        <script src="https://code.highcharts.com/modules/exporting.js"></script>#}
-        <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
+{#        <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>#}
 
         <script>
             $("#search-input").autocomplete({
