--- a/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
+++ b/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
@@ -141,6 +141,8 @@
     <script type='text/javascript' src="{% static 'common/bootstrap-daterangepicker/1.2/daterangepicker.js' %}"></script>
 {#    <script type='text/javascript' src="{% static 'common/momentjs/moment.js' %}"></script>#}
 
+{#    <script src="http://highcharts.github.io/export-csv/export-csv.js"></script>#}
+
     <script type="text/javascript">
 
         var data_include_uat = {{ dd_pie_data_include_uat | safe }};
