Re-implement home bar graph with flot

--- a/ceeq/apps/core/templates/core/base.html
+++ b/ceeq/apps/core/templates/core/base.html
@@ -16,6 +16,15 @@
             <script src="http://apps.qaci01.wic.west.com/static/common/bootstrap/3.0.0/assets/js/respond.min.js"></script>
         <![endif]-->
 
+        <script src="{% static 'common/jquery/1.10.2/jquery.min.js' %}"></script>
+        <script src="{% static 'ceeq/jqueryui/js/jquery-ui-1.10.4.js' %}"></script>
+
+        <script type="text/javascript" language="javascript" src="{% static 'flot/jquery.flot.js' %}"></script>
+        <script type="text/javascript" language="javascript" src="{% static 'flot/jquery.flot.categories.js' %}"></script>
+        <script type="text/javascript" language="javascript" src="{% static 'flot/jquery.flot.pie.js' %}"></script>
+        <script type="text/javascript" language="javascript" src="http://www.flotcharts.org/flot/jquery.flot.threshold.js"></script>
+
+
         <style>
             html, body, .container, .content {
                 height: 100%;
@@ -203,9 +212,7 @@
 
         </div>
 
-        <script src="{% static 'common/jquery/1.10.2/jquery.min.js' %}"></script>
         <script src="{% static 'common/bootstrap/3.0.3/dist/js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'ceeq/jqueryui/js/jquery-ui-1.10.4.js' %}"></script>
         <script src="{% static 'common/placeholders/3.0.0/placeholders.min.js' %}"></script>
         <script src="{% static 'common/highcharts/4.0.4/js/highcharts.js' %}"></script>
         <script src="{% static 'common/highcharts/4.0.4/js/modules/exporting.js' %}"></script>
