--- a/ceeq/apps/users/templates/users/home.html
+++ b/ceeq/apps/users/templates/users/home.html
@@ -13,7 +13,10 @@
 
         <br>
 
-        <div id="home_score_container" style="width: 100%; height: 600px;" ></div>
+        <div id="home_score_container" style="width: 100%; height: 600px;" hidden></div>
+
+        <div id="home_score_flot" style="width: 100%; height: 600px;" ></div>
+
 
     </div>
 {% endblock %}
