--- a/ceeq/apps/queries/templates/queries/score_overall.html
+++ b/ceeq/apps/queries/templates/queries/score_overall.html
@@ -1,12 +1,21 @@
 {% block body %}
 
     {% if projects_active %}
-        <div id="score_container" style="width: 100%; height: 600px;"></div>
+        <div id="score_container" style="width: 100%; height: 600px;" hidden></div>
+
+        <div style="text-align:center;">
+            <div id="flotcontainer" style="width: 800px; height: 600px; display: inline-block"></div>
+        </div>
+
     {% else %}
         <p>No project available</p>
     {% endif %}
 {% endblock %}
 
 {% block footer %}
+    <script type="text/javascript" src="http://static.pureexample.com/js/flot/jquery.flot.time.js"></script>
 
+    <script>
+        {% include 'queries/score_overall.js' %}
+    </script>
 {% endblock %}
