update for IE11 update

--- a/ceeq/apps/core/templates/core/base.html
+++ b/ceeq/apps/core/templates/core/base.html
@@ -6,6 +6,8 @@
         <title>CEEQ - {% block title %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
         <link href="{% static 'common/CEEQ.ico' %}" rel="shortcut icon">
         <link href="{% static 'common/font-awesome/4.0.3/css/font-awesome.min.css' %}" rel="stylesheet">
         <link href="{% static 'common/bootswatch/3.0.0/flatly/bootstrap.min.css' %}" rel="stylesheet">
