code efficiency etc.

--- a/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
+++ b/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
@@ -184,6 +184,7 @@
             $('#qei_log_custom').show();
         }
 
+        // Show or Hide jira_key and query_jql field
         if ('{{ project.query_field }}' == 'Project Version') {
             $('label[for="id_query_jql"]').hide();
             $('#id_query_jql').hide();
