--- a/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
+++ b/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
@@ -188,9 +188,12 @@
         if ('{{ project.query_field }}' == 'Project Version') {
             $('label[for="id_query_jql"]').hide();
             $('#id_query_jql').hide();
+
         } else {
             $('label[for="id_jira_key"]').hide();
             $('#id_jira_key').hide();
+            $('label[for="id_jira_version"]').hide();
+            $('#id_jira_version').hide();
         }
 
     </script>
