Update Yaxis name of home bar chart for JQL query etc.

--- a/ceeq/apps/queries/templates/queries/projects/projects.html
+++ b/ceeq/apps/queries/templates/queries/projects/projects.html
@@ -48,7 +48,7 @@
                                         {% endif %}
                                         {{ project.jira_version }}</a>
                                     {% else %}
-                                        No Version
+                                        JQL String
                                     {% endif %}
                                 </td>
                                 <td>
