Update guide_framework for adding 'Done' as 'Resolved'

--- a/ceeq/apps/help/templates/help/guide_framework.html
+++ b/ceeq/apps/help/templates/help/guide_framework.html
@@ -240,6 +240,7 @@
                                         <ul>
                                             <li>Resolved</li>
                                             <li>UAT Testing</li>
+                                            <li>Done</li>
                                         </ul>
                                     <li>Closed</li>
                                         <ul>
