--- a/ceeq/apps/queries/templates/queries/projects/projects.html
+++ b/ceeq/apps/queries/templates/queries/projects/projects.html
@@ -48,14 +48,14 @@
                                         {% endif %}
                                         {{ project.jira_version }}</a>
                                     {% else %}
-                                        JQL String
+                                        <a href='{{ project.instance.url }}/issues/?jql={{ project.query_jql }}' target="_blank">JQL Filter</a>
                                     {% endif %}
                                 </td>
                                 <td>
                                     {% if project.query_field == 'Project Version' %}
                                         <a href='{{ project.instance.url }}/browse/{{ project.jira_key }}' target="_blank">{{ project.jira_key }}</a>
                                     {% else %}
-                                        <a href='{{ project.instance.url }}/issues/?jql={{ project.query_jql }}' target="_blank">JQL Filter</a>
+                                        JQL String
                                     {% endif %}
                                 </td>
                                 <td><a href="#framework_parameter" data-toggle="tab" id="project_type_{{ project.pk }}"> {{ project.impact_map.name }}</a></td>
@@ -116,14 +116,24 @@
                             <tr>
                                 <td><a href='{% url 'queries:project_detail' project.id%}'>{{ project.name|truncatechars:20 }}</a></td>
                                 <td>
-                                    {% if project.jira_version == 'All Versions' %}
-                                        <a href="{{ project.instance.url }}/issues/?jql=project={{ project.jira_key }}" target="_blank">
+                                    {% if project.query_field == 'Project Version' %}
+                                        {% if project.jira_version == 'All Versions' %}
+                                            <a href="{{ project.instance.url }}/issues/?jql=project={{ project.jira_key }}" target="_blank">
+                                        {% else %}
+                                            <a href='{{ project.instance.url }}/issues/?jql=project={{ project.jira_key }} AND affectedVersion = "{{ project.jira_version }}" ' target="_blank">
+                                        {% endif %}
+                                        {{ project.jira_version }}</a>
                                     {% else %}
-                                        <a href='{{ project.instance.url }}/issues/?jql=project={{ project.jira_key }} AND affectedVersion = "{{ project.jira_version }}" ' target="_blank">
+                                        <a href='{{ project.instance.url }}/issues/?jql={{ project.query_jql }}' target="_blank">JQL Filter</a>
                                     {% endif %}
-                                    {{ project.jira_version }}</a>
                                 </td>
-                                <td><a href='{{ project.instance.url }}/browse/{{ project.jira_key }}' target="_blank">{{ project.jira_key }}</a></td>
+                                <td>
+                                    {% if project.query_field == 'Project Version' %}
+                                        <a href='{{ project.instance.url }}/browse/{{ project.jira_key }}' target="_blank">{{ project.jira_key }}</a>
+                                    {% else %}
+                                        JQL String
+                                    {% endif %}
+                                </td>
                                 <td>{{ project.impact_map.name}}</td>
                                 <td>
                                     {% with score=project.internal_score %}
