Update help template etc.

--- a/ceeq/apps/help/templates/help/guide_framework.html
+++ b/ceeq/apps/help/templates/help/guide_framework.html
@@ -17,6 +17,7 @@
                             <li><a href="#jira_issue_scope">CEEQ Framework Scope</a> </li>
                             <li><a href="#voice_slots_percentage_range">Voice Slots Range</a> </li>
                             <li><a href="#testing_character">Testing Characteristics</a> </li>
+                            <li><a href="#admin_control">Admin Control</a></li>
                         </ul>
                     </div>
                 </div>
@@ -382,6 +383,23 @@
 
                         </div>
 
+                    </div>
+
+                    <div id="admin_control">
+                        <h4 style="padding-top: 75px; margin-top: -75px;">Admin Control&nbsp;&nbsp;<a href="#index"><i class="fa fa-arrow-circle-up"></i> </a></h4>
+                        <ul>
+                            <li>The number of projects shown on home tempalte bar chart is controled by LiveSettings.home_chart_size</li>
+                            <li>Project component field has two options:</li>
+                                <ul>
+                                    <li>CEEQ Indicator</li>
+                                    <li>CEEQ Components, reserved for old CEEQ projects</li>
+                                </ul>
+                            <li>Project query fields has two options:</li>
+                                <ul>
+                                    <li>JQL Query, query jira data based on JQL query string</li>
+                                    <li>Projects Version, query jira data based on Project/version</li>
+                                </ul>
+                        </ul>
                     </div>
 
                 </div>
